Added Randomization
